--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
 
-const title = 'My Astro Blog';
-const description = 'The perfect starter for your perfect blog.';
+const title = 'goude.se';
+const description = 'On Entry Points and other things.';
 const permalink = Astro.site.href;
 ---
 
@@ -10,8 +10,7 @@ const permalink = Astro.site.href;
   <div class="home-container">
     <div class="home-copy">
       <h1>Entry Point</h1>
-      <p>"How can I learn more about [thing], if you are not here to tell me about it?"</p>
-      <p>Check out the docs on <a href="https://www.github.com/Charca/astro-blog-template" target="_blank" rel="noopener">GitHub</a> to get started.</p>
+      <p>"How could I learn more about [thing], if you were not here to tell me about it?"</p>
     </div>
 
     <div class="hero-image-container">
