--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -10,7 +10,8 @@ export interface Props {
 }
 
 const { title, description, permalink } = Astro.props
-const socialUrl = Astro.site.href + 'assets/social.png'
+// FIXME: using ! for now
+const socialUrl = Astro.site!.href + 'assets/social.png'
 ---
 
 <!-- Global Metadata -->
