--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,7 +3,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 
 const title = 'About';
 const description = 'About your blog.';
-const permalink = `${Astro.site.href}about`;
+const permalink = `${Astro.site!.href}about`; // FIXME: using ! for now, also, missing / ?
 ---
 
 <BaseLayout title={title} description={description} permalink={permalink} current="about">
