--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -3,6 +3,7 @@ import BaseLayout from '../../layouts/BaseLayout.astro';
 import Bio from '../../components/Bio.astro';
 import getPostData from '../../utils/getPostData';
 
+/*
 export async function getStaticPaths() {
   const posts = await Astro.glob('../../data/blog-posts/*.md');
   return posts.map(p => ({
@@ -10,11 +11,12 @@ export async function getStaticPaths() {
     props: { post: p },
   }));
 }
+*/
 
 const { Content, frontmatter } = Astro.props.post;
 const { title, description, publishDate } = frontmatter;
 const { slug, readingTime } = getPostData(Astro.props.post);
-const permalink = `${Astro.site.href}blog/${slug}`;
+const permalink = `${Astro.site!.href}blog/${slug}`; // FIXME: using ! for now
 ---
 
 <BaseLayout title={title} description={description} permalink={permalink} current="blog">
