--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 
 const title = 'goude.se';
 const description = 'On Entry Points and other things.';
-const permalink = Astro.site.href;
+const permalink = Astro.site!.href; // FIXME: using ! for now
 ---
 
 <BaseLayout title={title} description={description} permalink={permalink}>
