--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -13,6 +13,15 @@ export async function getStaticPaths() {
 }
 */
 
+export async function getStaticPaths(): Promise<{ params: { slug: string }; props: { post: any } }[]> {
+  const posts: { file: string }[] = await Astro.glob('../../data/blog-posts/*.md');
+  return posts.map((p: { file: string }) => ({
+    params: { slug: p.file.split('/').pop()!.split('.').shift()! },
+    props: { post: p },
+  }));
+}
+
+
 const { Content, frontmatter } = Astro.props.post;
 const { title, description, publishDate } = frontmatter;
 const { slug, readingTime } = getPostData(Astro.props.post);
