--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,12 +1,16 @@
 ---
-import BaseLayout from '../../layouts/BaseLayout.astro';
-import Bio from '../../components/Bio.astro';
-import getPostData from '../../utils/getPostData';
+import BaseLayout from "../../layouts/BaseLayout.astro";
+import Bio from "../../components/Bio.astro";
+import getPostData from "../../utils/getPostData";
 
-export async function getStaticPaths(): Promise<{ params: { slug: string }; props: { post: any } }[]> {
-  const posts: { file: string }[] = await Astro.glob('../../data/blog-posts/*.md');
+export async function getStaticPaths(): Promise<
+  { params: { slug: string }; props: { post: any } }[]
+> {
+  const posts: { file: string }[] = await Astro.glob(
+    "../../data/blog-posts/*.md",
+  );
   return posts.map((p: { file: string }) => ({
-    params: { slug: p.file.split('/').pop()!.split('.').shift()! },
+    params: { slug: p.file.split("/").pop()!.split(".").shift()! },
     props: { post: p },
   }));
 }
@@ -14,10 +18,15 @@ export async function getStaticPaths(): Promise<{ params: { slug: string }; prop
 const { Content, frontmatter } = Astro.props.post;
 const { title, description, publishDate } = frontmatter;
 const { slug, readingTime } = getPostData(Astro.props.post);
-const permalink = `${Astro.site!.href}blog/${slug}`; // FIXME: using ! for now
+const permalink = `${Astro.site!.href}blog/${slug}`;
 ---
 
-<BaseLayout title={title} description={description} permalink={permalink} current="blog">
+<BaseLayout
+  title={title}
+  description={description}
+  permalink={permalink}
+  current="blog"
+>
   <header>
     <p>{publishDate} ~ {readingTime}</p>
     <h1>{title}</h1>
