--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,17 +1,17 @@
 ---
-import { ViewTransitions } from 'astro:transitions'
-import '../styles/fonts.css'
-import '../styles/global.css'
+//import { ViewTransitions } from "astro:transitions";
+import "../styles/fonts.css";
+import "../styles/global.css";
 
 export interface Props {
-  title: string
-  description: string
-  permalink: string
+  title: string;
+  description: string;
+  permalink: string;
 }
 
-const { title, description, permalink } = Astro.props
+const { title, description, permalink } = Astro.props;
 // FIXME: using ! for now
-const socialUrl = Astro.site!.href + 'assets/social.png'
+const socialUrl = Astro.site!.href + "assets/social.png";
 ---
 
 <!-- Global Metadata -->
@@ -38,18 +38,18 @@ const socialUrl = Astro.site!.href + 'assets/social.png'
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={socialUrl} />
 
-<ViewTransitions />
+<!-- <ViewTransitions /> -->
 
 <!-- This is intentionally inlined to avoid FOUC -->
 <script is:inline>
-  const root = document.documentElement
-  const theme = localStorage.getItem('theme')
+  const root = document.documentElement;
+  const theme = localStorage.getItem("theme");
   if (
-    theme === 'dark' ||
-    (!theme && window.matchMedia('(prefers-color-scheme: dark)').matches)
+    theme === "dark" ||
+    (!theme && window.matchMedia("(prefers-color-scheme: dark)").matches)
   ) {
-    root.classList.add('theme-dark')
+    root.classList.add("theme-dark");
   } else {
-    root.classList.remove('theme-dark')
+    root.classList.remove("theme-dark");
   }
 </script>
