--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,15 +1,14 @@
 <footer>
   <span>
     &copy; {new Date().getFullYear()} goude.se.
-    Powered by <a href="https://astro.build" target="_blank" rel="noopener">Astro</a>.
-    Template by <a href="https://www.twitter.com/Charca" target="_blank" rel="noopener">Maxi Ferreira</a>.
+    <a href="/about#colophon">Colophon</a>.
   </span>
 </footer>
 
 <style>
   footer {
     color: var(--text-secondary);
-    font-size: .8em;
+    font-size: 0.8em;
     margin: 1em auto;
     max-width: 1400px;
     padding: 1em 2em;
