--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro';
+import BaseLayout from "../layouts/BaseLayout.astro";
 
-const title = 'goude.se';
-const description = 'On Entry Points and other things.';
+const title = "goude.se";
+const description = "On Entry Points and other things.";
 const permalink = Astro.site!.href; // FIXME: using ! for now
 ---
 
@@ -10,19 +10,39 @@ const permalink = Astro.site!.href; // FIXME: using ! for now
   <div class="home-container">
     <div class="home-copy">
       <h1>Entry Point</h1>
-      <p>"How could I learn more about [thing], if you were not here to tell me about it?"</p>
+      <p>
+        "How could I learn more about this [thing], if you were not here to tell
+        me about it?"
+      </p>
     </div>
 
     <div class="hero-image-container">
       <picture>
-        <source srcset="/assets/home-illustration.webp" media="(min-width: 600px)">
-        <img class="hero-image" alt="Illustration of person reading a book" src="/assets/home-illustration-small.webp" width="550" height="466">
+        <source
+          srcset="/assets/home-illustration.webp"
+          media="(min-width: 600px)"
+        />
+        <img
+          class="hero-image"
+          alt="Illustration of person reading a book"
+          src="/assets/home-illustration-small.webp"
+          width="550"
+          height="466"
+        />
       </picture>
       <p class="caption">
         Illustration by
-        <a href="https://icons8.com/illustrations/author/5c07e68d82bcbc0092519bb6" target="_blank" rel="noopener">Icons 8</a>
+        <a
+          href="https://icons8.com/illustrations/author/5c07e68d82bcbc0092519bb6"
+          target="_blank"
+          rel="noopener">Icons 8</a
+        >
         from
-        <a href="https://icons8.com/illustrations" target="_blank" rel="noopener">Ouch!</a>
+        <a
+          href="https://icons8.com/illustrations"
+          target="_blank"
+          rel="noopener">Ouch!</a
+        >
       </p>
     </div>
   </div>
@@ -64,7 +84,7 @@ const permalink = Astro.site!.href; // FIXME: using ! for now
   }
 
   .caption {
-    font-size: .8em;
+    font-size: 0.8em;
     font-style: italic;
     text-align: left;
   }
