minor edit/housekeeping activity

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ const permalink = Astro.site!.href; // FIXME: using ! for now
       <h1>Entry Point</h1>
       <p>
         "How could I learn more about this [thing], if you were not here to tell
-        me about it?"
+        me about <a href="/qa/cool-awakenings">it</a>?"
       </p>
     </div>
 
