--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,7 +13,7 @@ const permalink = `${Astro.site!.href}about`; // FIXME: using ! for now, also, m
   current="about"
 >
   <div class="container">
-    <h1>About</h1>
+    <h1 id="colophon">About</h1>
     <figure class="about-image">
       <img
         src="/assets/about-illustration.webp"
@@ -35,7 +35,19 @@ const permalink = `${Astro.site!.href}about`; // FIXME: using ! for now, also, m
         >
       </figcaption>
     </figure>
-    <h2 id="colophon">Colophon</h2>
+    <p>
+      <a
+        href="https://www.buymeacoffee.com/goude"
+        target="_blank"
+        class="no-style-link"
+        ><img
+          src="https://cdn.buymeacoffee.com/buttons/v2/default-blue.png"
+          alt="Buy Me A Coffee"
+          style="height: 60px !important;width: 217px !important;"
+        /></a
+      >
+    </p>
+    <h2>Colophon</h2>
     <ul>
       <li>
         Powered by <a href="https://astro.build" target="_blank" rel="noopener"
@@ -55,6 +67,7 @@ const permalink = `${Astro.site!.href}about`; // FIXME: using ! for now, also, m
         >.
       </li>
     </ul>
+    <h2>Placeholder Text</h2>
     <p>
       So you two dig up, dig up dinosaurs? What do they got in there? King Kong?
       My dad once told me, laugh and the world laughs with you, Cry, and I'll
