--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -14,27 +14,6 @@ const permalink = `${Astro.site!.href}about`; // FIXME: using ! for now, also, m
 >
   <div class="container">
     <h1 id="colophon">About</h1>
-    <figure class="about-image">
-      <img
-        src="/assets/about-illustration.webp"
-        alt="Illustration of a notebook"
-        width="330"
-      />
-      <figcaption>
-        Illustration by
-        <a
-          href="https://icons8.com/illustrations/author/5c07e68d82bcbc0092519bb6"
-          target="_blank"
-          rel="noopener">Icons 8</a
-        >
-        from
-        <a
-          href="https://icons8.com/illustrations"
-          target="_blank"
-          rel="noopener">Ouch!</a
-        >
-      </figcaption>
-    </figure>
     <p>
       <a
         href="https://www.buymeacoffee.com/goude"
@@ -67,7 +46,83 @@ const permalink = `${Astro.site!.href}about`; // FIXME: using ! for now, also, m
         >.
       </li>
     </ul>
+    <h2>Adage Experiment</h2>
+
+    <p id="adage">Loading...</p>
+
+    <script>
+      async function fetchRandomAdage() {
+        const githubApiUrl =
+          "https://api.github.com/repos/goude/adages/contents/adages";
+        const rawContentBaseUrl =
+          "https://raw.githubusercontent.com/goude/adages/master/adages/";
+
+        try {
+          const allowedFileNames = ["boot-messages", "wwdits"];
+
+          interface File {
+            name: string;
+          }
+
+          const listResponse = await fetch(githubApiUrl);
+          const fileList: File[] = await listResponse.json();
+          const filteredFileList = fileList.filter((file: File) =>
+            allowedFileNames.includes(file.name),
+          );
+          const randomFileName =
+            filteredFileList[
+              Math.floor(Math.random() * filteredFileList.length)
+            ].name;
+
+          const fileUrl = `${rawContentBaseUrl}${randomFileName}`;
+          const fileResponse = await fetch(fileUrl);
+          const fileContent = await fileResponse.text();
+
+          const adages = fileContent.split("%");
+          const randomAdage =
+            adages[Math.floor(Math.random() * adages.length)].trim();
+
+          const match = randomAdage.match(/^(.*?)(?:\s*–\s*(.*))?$/);
+          const adage = match ? match[1].trim() : randomAdage;
+          const attribution = match && match[2] ? match[2].trim() : null;
+
+          const formattedAdage = adage.replace(/\n/g, "<br>");
+          const adageElement = document.getElementById("adage")!;
+          adageElement.innerHTML = attribution
+            ? `${formattedAdage}<br><i>— ${attribution}</i>`
+            : formattedAdage;
+        } catch (error) {
+          console.error("Error fetching adage:", error);
+          document.getElementById("adage")!.textContent =
+            "Failed to load adage.";
+        }
+      }
+
+      fetchRandomAdage();
+    </script>
+
     <h2>Placeholder Text</h2>
+    <figure class="about-image">
+      <img
+        src="/assets/about-illustration.webp"
+        alt="Illustration of a notebook"
+        width="330"
+      />
+      <figcaption>
+        Illustration by
+        <a
+          href="https://icons8.com/illustrations/author/5c07e68d82bcbc0092519bb6"
+          target="_blank"
+          rel="noopener">Icons 8</a
+        >
+        from
+        <a
+          href="https://icons8.com/illustrations"
+          target="_blank"
+          rel="noopener">Ouch!</a
+        >
+      </figcaption>
+    </figure>
     <p>
       So you two dig up, dig up dinosaurs? What do they got in there? King Kong?
       My dad once told me, laugh and the world laughs with you, Cry, and I'll
