--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,9 @@ const permalink = Astro.site!.href; // FIXME: using ! for now
     <div class="home-copy">
       <h1>Entry Point</h1>
       <p>
-        "How could I learn more about this [thing], if you were not here to tell
+        "How could I learn more about this [thing], if you were not here to <a
+          href="/game/index.html">tell</a
+        >
         me about <a href="/qa/cool-awakenings">it</a>?"
       </p>
     </div>
