--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,13 +1,20 @@
+---
+const now = new Date();
+
+// Function to get ISO week number
+const getISOWeek = (date) => {
+  const tempDate = new Date(date.getTime());
+  tempDate.setUTCDate(tempDate.getUTCDate() + 4 - (tempDate.getUTCDay() || 7));
+  const yearStart = new Date(Date.UTC(tempDate.getUTCFullYear(), 0, 1));
+  return Math.ceil(((tempDate - yearStart) / 86400000 + 1) / 7);
+};
+
+const weekNumber = getISOWeek(now);
+---
+
 <footer>
   <span>
-    &copy; {new Date().getFullYear()} goude.se. Week {
-      Math.ceil(
-        ((new Date() - new Date(new Date().getFullYear(), 0, 1)) / 86400000 +
-          new Date().getDay() +
-          1) /
-          7,
-      )
-    }.
+    &copy; {now.getFullYear()} goude.se. Week {weekNumber}.
     <a href="/about#colophon">Colophon</a>.
   </span>
 </footer>
