revert deep globbing

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -11,9 +11,7 @@ type MarkdownPost = {
 };
 
 export const getStaticPaths = async () => {
-  const posts: MarkdownPost[] = await Astro.glob(
-    "../../data/blog-posts/**/*.md",
-  );
+  const posts: MarkdownPost[] = await Astro.glob("../../data/blog-posts/*.md");
   return posts.map((p) => ({
     params: { slug: p.file.split("/").pop()!.split(".").shift()! },
     props: { post: p },
