--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -5,7 +5,14 @@ const title = "Blog";
 const description = "Latest articles.";
 const permalink = `${Astro.site!.href}blog`;
 
-let allPosts = await Astro.glob("../../data/blog-posts/*.md");
+const modules = import.meta.glob("../../data/blog-posts/*.md");
+let allPosts = await Promise.all(
+  Object.entries(modules).map(async ([file, resolver]) => {
+    const post = await resolver();
+    return { ...post, file };
+  }),
+);
+
 allPosts = allPosts.sort(
   (a, b) =>
     new Date(b.frontmatter.publishDate).valueOf() -
@@ -23,7 +30,7 @@ allPosts = allPosts.sort(
     <h1>Blog</h1>
     {
       allPosts.map((post, index) => {
-        const href = `/blog/${post.file.split("/").pop()!.split(".").shift()}`; // FIXME: using ! for now
+        const href = `/blog/${post.file.split("/").pop()!.split(".").shift()}`;
         return (
           <div>
             {index !== 0 && <hr />}
@@ -56,14 +63,12 @@ allPosts = allPosts.sort(
     font-family: var(--font-family-sans);
     font-weight: 700;
   }
-
   .post-item-date {
     color: var(--text-secondary);
     text-align: left;
     text-transform: uppercase;
     margin-right: 16px;
   }
-
   hr {
     margin: 60px auto;
   }
