--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -24,7 +24,8 @@ const formattedBuildDate = `${buildDate.getFullYear()}-${pad(buildDate.getMonth(
 
 <footer>
   <span>
-    &copy; {now.getFullYear()} goude.se. Week {weekNumber}.
+    &copy; {now.getFullYear()}
+    <a href="https://goude.se">goude.se</a>. Week {weekNumber}.
     <a href="/about#colophon">Colophon</a>. Built {formattedBuildDate} (v{
       pkg.version
     }).
