--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,12 +9,10 @@ const permalink = Astro.site!.href; // FIXME: using ! for now
 <BaseLayout title={title} description={description} permalink={permalink}>
   <div class="home-container">
     <div class="home-copy">
-      <h1>Entry Point</h1>
+      <h1>Hello There</h1>
       <p>
-        "How could I learn more about this [thing], if you were not here to <a
-          href="/game/index.html">tell</a
-        >
-        me about <a href="/qa/cool-awakenings">it</a>?"
+        Remember: Lack of planning on your part does not constitute an emergency
+        on mine.
       </p>
     </div>
 
