--- a/src/pages/ft-2025.astro
+++ b/src/pages/ft-2025.astro
@@ -1,7 +1,3 @@
----
-
----
-
 <!doctype html>
 <html lang="sv">
   <head>
@@ -23,6 +19,19 @@
         margin: 0;
         color: gold;
         text-shadow: 2px 2px 4px rgba(255, 215, 0, 0.5);
+        position: relative;
+      }
+
+      .background-svg {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: url("assets/blhj_logo.svg") no-repeat center center;
+        background-size: contain; /* Adjust as needed */
+        opacity: 0.1; /* Adjust transparency */
+        z-index: -1;
       }
 
       h1 {
@@ -90,12 +99,66 @@
     </style>
   </head>
   <body>
+    <div class="background-svg"></div>
+
     <h1>Nu är det bara</h1>
     <div class="divider"></div>
     <div id="countdown">Laddar...</div>
     <div class="divider"></div>
     <p>kvar till Feldttåget 2025!</p>
     <p>"Inte bara jag"</p>
+    <p id="adage">Loading...</p>
+
+    <script>
+      async function fetchRandomAdage() {
+        const githubApiUrl =
+          "https://api.github.com/repos/goude/adages/contents/adages";
+        const rawContentBaseUrl =
+          "https://raw.githubusercontent.com/goude/adages/master/adages/";
+
+        try {
+          const allowedFileNames = ["boot-messages", "wwdits"];
+
+          interface File {
+            name: string;
+          }
+
+          const listResponse = await fetch(githubApiUrl);
+          const fileList: File[] = await listResponse.json();
+          const filteredFileList = fileList.filter((file: File) =>
+            allowedFileNames.includes(file.name),
+          );
+          const randomFileName =
+            filteredFileList[
+              Math.floor(Math.random() * filteredFileList.length)
+            ].name;
+
+          const fileUrl = `${rawContentBaseUrl}${randomFileName}`;
+          const fileResponse = await fetch(fileUrl);
+          const fileContent = await fileResponse.text();
+
+          const adages = fileContent.split("%");
+          const randomAdage =
+            adages[Math.floor(Math.random() * adages.length)].trim();
+
+          const match = randomAdage.match(/^(.*?)(?:\s*–\s*(.*))?$/);
+          const adage = match ? match[1].trim() : randomAdage;
+          const attribution = match && match[2] ? match[2].trim() : null;
+
+          const formattedAdage = adage.replace(/\n/g, "<br>");
+          const adageElement = document.getElementById("adage")!;
+          adageElement.innerHTML = attribution
+            ? `${formattedAdage}<br><i>— ${attribution}</i>`
+            : formattedAdage;
+        } catch (error) {
+          console.error("Error fetching adage:", error);
+          document.getElementById("adage")!.textContent =
+            "Failed to load adage.";
+        }
+      }
+
+      fetchRandomAdage();
+    </script>
 
     <script>
       function updateCountdown() {
