--- a/src/pages/ft-2025.astro
+++ b/src/pages/ft-2025.astro
@@ -88,7 +88,7 @@
     <script>
       async function injectSVG() {
         try {
-          const response = await fetch("assets/blhj_logo.svg");
+          const response = await fetch("/assets/blhj_logo.svg");
           let svgText = await response.text();
           svgText = svgText
             .replace(/fill-opacity:[^;]+;/g, "fill-opacity:0.5;")
