--- a/src/pages/ft-2025.astro
+++ b/src/pages/ft-2025.astro
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Vollkorn:wght@600&family=EB+Garamond:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Vollkorn:wght@600&family=EB+Garamond:wght@700&family=Playfair+Display:ital,wght@1,700&display=swap"
       rel="stylesheet"
     />
     <style>
@@ -68,6 +68,10 @@
       }
 
       #adage {
+        font-family: "Playfair Display", serif;
+        font-size: 1.7em;
+        font-style: italic;
+        font-weight: 700;
         opacity: 0;
         transition: opacity 2s ease-in-out;
       }
