--- a/src/pages/ft-2025.astro
+++ b/src/pages/ft-2025.astro
@@ -12,15 +12,13 @@
     />
     <style>
       body {
-        font-family: "EB Garamond", serif;
-        text-align: center;
-        background: radial-gradient(circle at top, #0d1b42, #020b26);
         display: flex;
         flex-direction: column;
-        justify-content: center;
         align-items: center;
-        height: 100vh;
         margin: 0;
+        height: 100vh;
+        background: radial-gradient(circle at top, #0d1b42, #020b26);
+        font-family: "EB Garamond", serif;
         color: gold;
         text-shadow: 2px 2px 4px rgba(255, 215, 0, 0.5);
         position: relative;
@@ -33,6 +31,20 @@
         width: 100%;
         height: 100%;
         z-index: -1;
+      }
+
+      .top-link {
+        margin-top: 1em;
+        color: gold;
+      }
+
+      .content {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
       }
 
       h1 {
@@ -83,12 +95,15 @@
   </head>
   <body>
     <div class="background-svg" id="svg-container"></div>
-    <h1>Nu är det bara</h1>
-    <div class="divider"></div>
-    <div id="countdown">Laddar...</div>
-    <div class="divider"></div>
-    <p>kvar till Feldttåget 2025!</p>
-    <p id="adage">Loading...</p>
+    <a href="https://goude.se/ft-2025" class="top-link">goude.se/ft-2025</a>
+    <div class="content">
+      <h1>Nu är det bara</h1>
+      <div class="divider"></div>
+      <div id="countdown">Laddar...</div>
+      <div class="divider"></div>
+      <p>kvar till Feldttåget 2025!</p>
+      <p id="adage">Loading...</p>
+    </div>
     <script>
       async function injectSVG() {
         try {
