--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,6 +13,7 @@ const getISOWeek = (date: Date) => {
   );
 };
 
+// Get weeknumber and dispatch it
 const weekNumber = getISOWeek(now);
 
 declare const __BUILD_TIMESTAMP__: string; // Perhaps one should not put declarations here. Gets rid of warning.
