--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -15,16 +15,9 @@ const permalink = `${Astro.site!.href}about`; // FIXME: using ! for now, also, m
   <div class="container">
     <h1 id="colophon">About</h1>
     <p>
-      <a
-        href="https://www.buymeacoffee.com/goude"
-        target="_blank"
-        class="no-style-link"
-        ><img
-          src="https://cdn.buymeacoffee.com/buttons/v2/default-blue.png"
-          alt="Buy Me A Coffee"
-          style="height: 60px !important;width: 217px !important;"
-        /></a
-      >
+      What’s this? I live in a place where knowing the current week number is
+      strangely important. So I made a page to help me remember it (it's in the
+      footer). Then I added some fluff around that.
     </p>
     <h2>Colophon</h2>
     <ul>
@@ -100,6 +93,21 @@ const permalink = `${Astro.site!.href}about`; // FIXME: using ! for now, also, m
 
       fetchRandomAdage();
     </script>
+
+    <h2>Synthesizer Funding</h2>
+
+    <p>
+      <a
+        href="https://www.buymeacoffee.com/goude"
+        target="_blank"
+        class="no-style-link"
+        ><img
+          src="https://cdn.buymeacoffee.com/buttons/v2/default-blue.png"
+          alt="Buy Me A Coffee"
+          style="height: 60px !important;width: 217px !important;"
+        /></a
+      >
+    </p>
 
     <h2>Placeholder Text</h2>
     <figure class="about-image">
