--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,11 @@ const permalink = Astro.site!.href; // FIXME: using ! for now
     <div class="home-copy">
       <h1><a href="/hello">Hello</a> There</h1>
       <p>
+        A clear, written <a href="/ref/entry-point">entry point</a>—like a
+        simple README—can replace the inefficiency and exclusivity of relying on
+        oral tradition to onboard newcomers.
+      </p>
+      <p>
         <a href="https://www.youtube.com/watch?v=E3kbUA1PNts"
           >What means "get rid of"?</a
         > Check out the <a href="/ref/command-palette-cheatsheet">cheat sheet</a
