--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,12 @@ const description = "On Entry Points and other things.";
 const permalink = Astro.site!.href; // FIXME: using ! for now
 ---
 
-<BaseLayout title={title} description={description} permalink={permalink}>
+<BaseLayout
+  title={title}
+  description={description}
+  permalink={permalink}
+  current="home"
+>
   <div class="home-container">
     <div class="home-copy">
       <h1><a href="/hello">Hello</a> There</h1>
