minor edit/housekeeping activity

--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -12,5 +12,10 @@
 </style>
 
 <a href="/">
-  <img alt="Blog Logo" src="/assets/logo.webp" width="75" height="50" />
+  <img
+    alt="At some point this WILL become a cursed witch had"
+    src="/assets/logo.webp"
+    width="75"
+    height="50"
+  />
 </a>
