--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -109,10 +109,11 @@ const permalink = `${Astro.site!.href}about`; // FIXME: using ! for now, also, m
       >
     </p>
 
-    <h2>Debugging Links</h2>
-    <p>
-      <a href="/qa/cool-awakenings">Cool Awakenings</a>.
-    </p>
+    <h2>Certain Links</h2>
+    <ul>
+      <li><a href="/sitemap">Sitemap</a></li>
+      <li><a href="/qa/cool-awakenings">Cool awakenings</a></li>
+    </ul>
 
     <h2>Placeholder Text</h2>
     <figure class="about-image">
