update entry point

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ const permalink = Astro.site!.href; // FIXME: using ! for now
     <div class="home-copy">
       <h1><a href="/hello">Hello</a> There</h1>
       <p>
-        A clear, written <a href="/ref/entry-point">entry point</a>—like a
+        A clear, written <a href="/entry-point">entry point</a>—like a
         simple README—can replace the inefficiency and exclusivity of relying on
         oral tradition to onboard newcomers.
       </p>
