various text tweaks

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,15 +16,19 @@ const permalink = Astro.site!.href; // FIXME: using ! for now
     <div class="home-copy">
       <h1><a href="/hello">Hello</a> There</h1>
       <p>
-        A clear, written <a href="/entry-point">entry point</a>—like a
-        simple README—can replace the inefficiency and exclusivity of relying on
-        oral tradition to onboard newcomers.
+        Some things are here to be useful. Others are here to be recognized. If
+        you're the kind of person who feels relief when structure replaces
+        ritual, or who builds to understand—then this may be for you.
       </p>
+
+      <p>
+        Start with the <a href="/entry-point">entry point</a>.
+      </p>
+      <!-- But Daddy Gemerno... -->
       <p>
         <a href="https://www.youtube.com/watch?v=E3kbUA1PNts"
-          >What means "get rid of"?</a
-        > Check out the <a href="/ref/command-palette-cheatsheet">cheat sheet</a
-        >.
+          >"What means get rid of?"</a
+        >
       </p>
     </div>
 
