--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -33,11 +33,6 @@ const permalink = `${Astro.site!.href}about`; // FIXME: using ! for now, also, m
           rel="noopener">Maxi Ferreira</a
         >.
       </li>
-      <li>
-        Text placeholder via <a href="https://jeffsum.com/" target="_blank"
-          >Jeffsum</a
-        >.
-      </li>
     </ul>
     <h2>Adage Experiment</h2>
 
@@ -94,6 +89,12 @@ const permalink = `${Astro.site!.href}about`; // FIXME: using ! for now, also, m
       fetchRandomAdage();
     </script>
 
+    <h2>Certain Links</h2>
+    <ul>
+      <li><a href="/sitemap">Sitemap</a></li>
+      <li><a href="/qa/cool-awakenings">Cool awakenings</a></li>
+    </ul>
+
     <h2>Synthesizer Funding</h2>
 
     <p>
@@ -109,13 +110,7 @@ const permalink = `${Astro.site!.href}about`; // FIXME: using ! for now, also, m
       >
     </p>
 
-    <h2>Certain Links</h2>
-    <ul>
-      <li><a href="/sitemap">Sitemap</a></li>
-      <li><a href="/qa/cool-awakenings">Cool awakenings</a></li>
-    </ul>
-
-    <h2>Placeholder Text</h2>
+    <!-- Here's how to include an image, for later
     <figure class="about-image">
       <img
         src="/assets/about-illustration.webp"
@@ -137,57 +132,26 @@ const permalink = `${Astro.site!.href}about`; // FIXME: using ! for now, also, m
         >
       </figcaption>
     </figure>
-    <p>
-      So you two dig up, dig up dinosaurs? What do they got in there? King Kong?
-      My dad once told me, laugh and the world laughs with you, Cry, and I'll
-      give you something to cry about you little bastard! Life finds a way. God
-      creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys
-      God. Man creates Dinosaurs.
-    </p>
-    <p>
-      You really think you can fly that thing? You know what? It is beets. I've
-      crashed into a beet truck. Forget the fat lady! You're obsessed with the
-      fat lady! Drive us out of here! Is this my espresso machine? Wh-what
-      is-h-how did you get my espresso machine?
-    </p>
-    <p>
-      Hey, you know how I'm, like, always trying to save the planet? Here's my
-      chance. Hey, take a look at the earthlings. Goodbye! I was part of
-      something special. Just my luck, no ice. You're a very talented young man,
-      with your own clever thoughts and ideas. Do you need a manager?
-    </p>
-    <p>
-      Jaguar shark! So tell me - does it really exist? This thing comes fully
-      loaded. AM/FM radio, reclining bucket seats, and... power windows. Yes,
-      Yes, without the oops! You're a very talented young man, with your own
-      clever thoughts and ideas. Do you need a manager?
-    </p>
-    <p>
-      Yes, Yes, without the oops! Do you have any idea how long it takes those
-      cups to decompose. They're using our own satellites against us. And the
-      clock is ticking. Do you have any idea how long it takes those cups to
-      decompose. My dad once told me, laugh and the world laughs with you, Cry,
-      and I'll give you something to cry about you little bastard!
-    </p>
+    -->
   </div>
-</BaseLayout>
 
-<style>
-  .about-image {
-    float: right;
-    margin: -3em -7em 2em 2em;
-    max-width: 300px;
-  }
-
-  .about-image img {
-    border-radius: 8px;
-    margin-bottom: 1.5em;
-  }
-
-  @media (max-width: 1020px) {
+  <style>
     .about-image {
-      float: none;
-      margin: 0 auto 2em;
+      float: right;
+      margin: -3em -7em 2em 2em;
+      max-width: 300px;
     }
-  }
-</style>
+
+    .about-image img {
+      border-radius: 8px;
+      margin-bottom: 1.5em;
+    }
+
+    @media (max-width: 1020px) {
+      .about-image {
+        float: none;
+        margin: 0 auto 2em;
+      }
+    }
+  </style>
+</BaseLayout>
