--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -3,17 +3,11 @@
     display: block;
     width: 75px;
   }
-
-  @media screen and (max-width: 520px) {
-    img {
-      display: none;
-    }
-  }
 </style>
 
 <a href="/">
   <img
-    alt="At some point this WILL become a cursed witch had"
+    alt="At some point this WILL become a cursed witch's hat"
     src="/assets/logo.webp"
     width="75"
     height="50"
