--- a/src/pages/hello.astro
+++ b/src/pages/hello.astro
@@ -5,7 +5,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
 <BaseLayout title={title}>
-  <div class="container">
+  <section>
     <h2>Hi, thanks for reaching out 👋</h2>
 
     <p>
@@ -58,7 +58,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
     </blockquote>
 
     <p>Thanks for helping make things smoother! 🙏</p>
-  </div>
+  </section>
 
   <script is:inline>
     const params = new URLSearchParams(window.location.search);
