--- a/src/pages/sitemap.astro
+++ b/src/pages/sitemap.astro
@@ -11,7 +11,7 @@ const routes = await getAllRoutes(site);
   description="A list of all pages on this site."
   permalink="/sitemap/"
 >
-  <div class="container">
+  <section>
     <h2>Sitemap</h2>
     <ul>
       {
@@ -22,5 +22,5 @@ const routes = await getAllRoutes(site);
         ))
       }
     </ul>
-  </div>
+  </section>
 </BaseLayout>
