--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,23 +1,14 @@
 ---
-import Logo from './Logo.astro'
-import Nav from './Nav.astro'
+import Logo from "./Logo.astro";
+import Nav from "./Nav.astro";
 
-const { current = '' } = Astro.props;
+const { current = "" } = Astro.props;
 ---
 
 <style>
   header {
     display: flex;
     margin: 0 auto;
-    max-width: 1400px;
-    padding: 2em;
-    width: 100%;
-  }
-
-  @media screen and (max-width: 520px) {
-    header {
-      padding: 2em 0;
-    }
   }
 </style>
 
