--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,22 +12,51 @@ const permalink = Astro.site!.href; // FIXME: using ! for now
   permalink={permalink}
   current="home"
 >
+  <!-- It clicked, i think -->
+  <h1 id="tufte-css">Transmission Begins</h1>
+  <p class="subtitle">We're not in Kansas anymore.</p>
+  <p></p>Culture Mind name: <strong
+    >Build First, Understand Elegantly Later</strong
+  > .
   <section>
-    <h1><a href="/hello">Hello</a> There</h1>
-    <p>
-      Some things are here to be useful. Others are here to be recognized. If
-      you're the kind of person who feels relief when structure replaces ritual,
-      or who builds to understand—then this may be for you.
-    </p>
-
-    <p>
-      Start with the <a href="/entry-point">entry point</a>.
-    </p>
-    <!-- But Daddy Guimerno... -->
-    <p>
-      <a href="https://www.youtube.com/watch?v=E3kbUA1PNts"
-        >"What means get rid of?"</a
-      >
-    </p>
+    <section>
+      <h2 id="sidenotes">Sidenotes: Footnotes and Marginal Notes</h2>
+      <p>
+        One of the most distinctive features of Tufte’s style is his extensive
+        use of sidenotes.<label
+          for="sn-extensive-use-of-sidenotes"
+          class="margin-toggle sidenote-number"></label><input
+          type="checkbox"
+          id="sn-extensive-use-of-sidenotes"
+          class="margin-toggle"
+        /><span class="sidenote">This is a sidenote.</span> Sidenotes are like footnotes,
+        except they don’t force the reader to jump their eye to the bottom of the
+        page, but instead display off to the side in the margin. Perhaps you have
+        noticed their use in this document already. You are very astute.
+      </p>
+      <p>
+        If you want a sidenote without footnote-style numberings, then you want
+        a margin note.
+        <label for="mn-demo" class="margin-toggle">&#8853;</label>
+        <input type="checkbox" id="mn-demo" class="margin-toggle" />
+        <span class="marginnote">
+          This is a margin note. Notice there isn’t a number preceding the note.
+        </span> On large screens, a margin note is just a sidenote that omits the
+        reference number. This lessens the distracting effect taking away from the
+        flow of the main text, but can increase the cognitive load of matching a
+        margin note to its referent text. However, on small screens, a margin note
+        is like a sidenote except its viewability-toggle is a symbol rather than
+        a reference number. This document currently uses the symbol &#8853; (<code
+          >&amp;#8853;</code
+        >), but it’s up to you.
+      </p>
+      <p>
+        Margin notes are created just like sidenotes, but with the <code
+          >marginnote</code
+        > class for the content and the <code>margin-toggle</code> class for the
+        label and dummy checkbox. For instance, here is the code for the margin note
+        used in the previous paragraph:
+      </p>
+    </section>
   </section>
 </BaseLayout>
