--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,8 +18,15 @@ const permalink = Astro.site!.href; // FIXME: using ! for now
   <p></p>Culture Mind name: <strong
     >Build First, Understand Elegantly Later</strong
   > .
+
   <section>
     <section>
+      <h2>Pill Tests</h2>
+      <p>
+        <img src="/pill?left=HUMAN%2BAI&right=Generated" alt="A pill box" />
+        <img src="/pill" alt="A secondpill box" />
+      </p>
+
       <h2 id="sidenotes">Sidenotes: Footnotes and Marginal Notes</h2>
       <p>
         One of the most distinctive features of Tufte’s style is his extensive
